2017-03-17  Björn Freise  <mcfreis@gmx.net>

	SSL_write() extended to handle ctypes.Array as data

	* dtls/openssl.py: SSL_write() can handle ctypes.Array data
	* dtls/sslconnection.py: Added missing import ERR_BOTH_KEY_CERT_FILES
	* dtls/test/simple_client.py: Added basic test client to use with dtls/test/echo_seq.py

2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Beautified lists and maps, grouped imports for easy merges in the future - no changed functionality!

	* dtls/openssl.py:
		- Ordered constants according to header file from openSSL
		- Beautified __all__-list and map for _make_function() in order to easy merges in the future
		- Added a few returns in order to evaluate the success of the called methods
	* dtls/patch.py: Grouped imports in the following order - system, local
	* dtls/sslconnection.py: ssl protocol not hardcoded anymore for forked objects
	* dtls/x509.py: logger messages working again

2017-02-27  Ray Brown  <code@liquibits.com>

	* dtls/openssl.py: support reading directly into given buffer instead of forcing buffer copy (for ssl module compatibility)
	* dtls/sslconnection.py: in-situ receive support, as above
	* dtls/patch.py: various changes for compatibility with the ssl module of Python 2.7.12; note that the ssl module's new SSLContext is not supported
	* dtls/test/unit.py: changes to support the updated ssl module, including fix of deprecation warnings
	* setup.py: increase version to 1.0.2

2014-01-18  Ray Brown  <code@liquibits.com>

	* setup.py: Increase version to 1.0.1 for release to PyPI

2014-01-18  Jayson Vantuyl  <kagato@souja.net>

	* sslconnection.py: fix missing error code import

2014-01-18  Ray Brown  <code@liquibits.com>

	* setup.py: First stable version, 1.0.0
	* dtls/test/makecerts: Generate valid and current certificates for
	unit test suite
	* dtls/test/openssl_ca.cnf: Configuration file for CA certificate
	* dtls/test/openssl_server.cnf: Configuration file for server
	certificate