@@ -1,5 +1,14 @@
 2017-03-17  Björn Freise  <mcfreis@gmx.net>
 
+	Added interface for SSL_CTX_set_info_callback()
+
+	* dtls/openssl.py:
+		- Added methods SSL_CTX_set_info_callback(), SSL_state_string_long(), SSL_alert_type_string_long() and SSL_alert_desc_string_long()
+		- Added constants for state and error evaluation during callback
+	* dtls/sslconnection.py: Added _ssl_logging_cb() as default callback function - only outputs messages when logger is active
+
+2017-03-17  Björn Freise  <mcfreis@gmx.net>
+
 	SSL_write() extended to handle ctypes.Array as data
 
 	* dtls/openssl.py: SSL_write() can handle ctypes.Array data
